--- a/lib/form/sizes.css
+++ b/lib/form/sizes.css
@@ -1,13 +1,18 @@
 /* button sizes */
-.field {
-  &.tiny {
-    padding: 0 var(--gutter-tiny);
+.field,
+.button {
+  font-size: var(--field-font-size);
 
-    height: var(--field-height-big);
-    line-height: var(--field-height-big);
-  }
+  margin: var(--gutter-tiny) 0;
+  padding: var(--gutter-tiny) var(--gutter-small);
+  box-sizing: border-box;
+
+  height: var(--field-height);
+  line-height: var(--field-height);
 
   &.tiny {
+    font-size: var(--field-font-size-tiny);
+
     margin: var(--gutter-tiny) 0;
     padding-left: var(--gutter-tiny);
     padding-right: var(--gutter-tiny);
@@ -17,6 +22,8 @@
   }
 
   &.small {
+    font-size: var(--field-font-size-small);
+
     margin: var(--gutter-small) 0;
     padding-left: var(--gutter-small);
     padding-right: var(--gutter-small);
@@ -26,6 +33,8 @@
   }
 
   &.big {
+    font-size: var(--field-font-size-big);
+
     margin: var(--gutter-small) 0;
     padding-left: var(--gutter);
     padding-right: var(--gutter);
@@ -35,6 +44,7 @@
   }
 
   &.large {
+    font-size: var(--field-font-size-large);
     margin: var(--gutter) 0;
     padding-left: var(--gutter-big);
     padding-right: var(--gutter-big);
