added default font-weight for button and field

--- a/lib/form/button.css
+++ b/lib/form/button.css
@@ -18,7 +18,7 @@
 }
 
 .button {
-  font-weight: var(--font-light);
+  font-weight: var(--field-font-weight);
   text-transform: var(--field-text-transform);
 
   color: var(--button-color);
