--- a/lib/form/field.css
+++ b/lib/form/field.css
@@ -18,7 +18,7 @@
 }
 
 .field {
-  font-weight: var(--font-light);
+  font-weight: var(--field-font-weight);
   text-transform: var(--field-text-transform);
 
   color: var(--field-color);
