--- a/lib/form/sizes.css
+++ b/lib/form/sizes.css
@@ -3,7 +3,7 @@
 .button {
   display: inline-block;
 
-  font-size: var(--field-font-size);
+  font-size: 1em;
 
   margin-top: var(--gutter-tiny);
   margin-bottom: var(--gutter-tiny);
@@ -16,7 +16,7 @@
   line-height: var(--field-height);
 
   &.tiny {
-    font-size: var(--field-font-size-tiny);
+    /* font-size: var(--field-font-size-tiny); */
 
     margin-top: var(--gutter-tiny);
     margin-bottom: var(--gutter-tiny);
@@ -29,7 +29,7 @@
   }
 
   &.small {
-    font-size: var(--field-font-size-small);
+    /* font-size: var(--field-font-size-small); */
 
     margin-top: var(--gutter-small);
     margin-bottom: var(--gutter-small);
@@ -42,7 +42,7 @@
   }
 
   &.big {
-    font-size: var(--field-font-size-big);
+    /* font-size: var(--field-font-size-big); */
 
     margin-top: var(--gutter-small);
     margin-bottom: var(--gutter-small);
@@ -55,7 +55,7 @@
   }
 
   &.large {
-    font-size: var(--field-font-size-large);
+    /* font-size: var(--field-font-size-large); */
 
     margin-top: var(--gutter);
     margin-bottom: var(--gutter);
