--- a/lib/form/sizes.css
+++ b/lib/form/sizes.css
@@ -3,53 +3,53 @@
 .button {
   display: inline-block;
 
-  font-size: 1em;
-
-  margin-top: var(--gutter-tiny);
-  margin-bottom: var(--gutter-tiny);
+  font-size: var(--field-font-size);
 
   padding-left: var(--gutter-small);
   padding-right: var(--gutter-small);
   box-sizing: border-box;
 
-  &.tiny {
-    /* font-size: var(--field-font-size-tiny); */
+  height: var(--field-height);
+  line-height: var(--field-height);
 
-    margin-top: var(--gutter-tiny);
-    margin-bottom: var(--gutter-tiny);
+  &.tiny {
+    font-size: var(--field-font-size-tiny);
 
     padding-left: var(--gutter-tiny);
     padding-right: var(--gutter-tiny);
+
+    height: var(--field-height-tiny);
+    line-height: var(--field-height-tiny);
   }
 
   &.small {
-    /* font-size: var(--field-font-size-small); */
-
-    margin-top: var(--gutter-small);
-    margin-bottom: var(--gutter-small);
+    font-size: var(--field-font-size-small);
 
     padding-left: var(--gutter-small);
     padding-right: var(--gutter-small);
+
+    height: var(--field-height-small);
+    line-height: var(--field-height-small);
   }
 
   &.big {
-    /* font-size: var(--field-font-size-big); */
-
-    margin-top: var(--gutter-small);
-    margin-bottom: var(--gutter-small);
+    font-size: var(--field-font-size-big);
 
     padding-left: var(--gutter);
     padding-right: var(--gutter);
+
+    height: var(--field-height-big);
+    line-height: var(--field-height-big);
   }
 
   &.large {
-    /* font-size: var(--field-font-size-large); */
-
-    margin-top: var(--gutter);
-    margin-bottom: var(--gutter);
+    font-size: var(--field-font-size-large);
 
     padding-left: var(--gutter-big);
     padding-right: var(--gutter-big);
+
+    height: var(--field-height-large);
+    line-height: var(--field-height-large);
   }
 
   &.wide {
