--- a/lib/form/field.css
+++ b/lib/form/field.css
@@ -15,6 +15,9 @@
   --field-border-color: var(--primary);
   --field-border-color-hover: var(--primary-hover);
   --field-border-color-focus: var(--primary-focus);
+
+  --field-placeholder-color: var(--lightgray);
+  --field-placeholder-opacity: .1;
 }
 
 .field {
