--- a/lib/form/textarea.css
+++ b/lib/form/textarea.css
@@ -1,6 +1,11 @@
+:root {
+  --textarea-min-height: 18rem;
+  --textarea-min-width: 56rem;
+}
+
 .ui.flexible.form.field {
   height: auto;
-  line-height: normal;
+  line-height: var(--document-line-height);
 
   padding: var(--gutter-small);
 
@@ -18,6 +23,7 @@
 }
 
 textarea.ui.flexible.form.field {
-  min-height: 18rem;
-  line-height: normal;
+  min-height: var(--textarea-min-height);
+  min-width: var(--textarea-min-width);
+  line-height: var(--document-line-height);
 }
