--- a/lib/form/checkbox.css
+++ b/lib/form/checkbox.css
@@ -13,7 +13,7 @@
   --checkbox-label-gutter: var(--gutter-small);
 }
 
-.ui.form.checkbox {
+.ui.checkbox {
   line-height: 1;
 
   > input {
@@ -66,7 +66,7 @@
 }
 
 /* sizes */
-.ui.form.checkbox {
+.ui.checkbox {
   &.tiny > span {
     &::before,
     &::after {
