--- a/lib/form/field.css
+++ b/lib/form/field.css
@@ -16,6 +16,7 @@
   --field-text-transform: uppercase;
   --field-font-weight: var(--font-regular);
   --field-text-align: left;
+  --field-letter-spacing: 0;
 
   /* borders */
   --field-border-width: 1px;
@@ -40,10 +41,11 @@
   --field-disabled-border-color: var(--lightengray);
 }
 
-.ui.form.field {
+.ui.field {
   font-weight: var(--field-font-weight);
   text-transform: var(--field-text-transform);
   text-align: var(--field-text-align);
+  letter-spacing: var(--field-letter-spacing);
 
   color: var(--field-color);
   background: var(--field-background);
