--- a/lib/form/field.css
+++ b/lib/form/field.css
@@ -67,7 +67,7 @@
     )
   }
 
-  &:not(:disabled) {
+  &.interactive:not(:disabled) {
     &:hover {
       color: var(--field-color-hover);
       background: var(--field-background-hover);
