--- a/lib/form/config.css
+++ b/lib/form/config.css
@@ -1,11 +1,13 @@
 :root {
   /* unit */
-  --field-unit: var(--unit);
+  --field-unit: var(--sizing-unit);
 
   /* sequence */
   --field-height-sequence: var(--minor-third);
   --field-height-base: 2.4;
-  --field-height: var(--field-height-base)var(--field-unit);
+  --field-height: calc(
+    var(--field-height-base) * var(--field-unit)
+  );
 
   /* heighs */
   --field-height-tiny: calc(var(--field-height-small) /
